--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.13",
     "expo-splash-screen": "~0.29.18",
@@ -36,8 +37,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-awesome-slider": "^2.7.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-colors": "^2.4.0",
     "react-native-marquee": "^0.5.0",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.12.0",
@@ -46,6 +49,7 @@
     "react-native-track-player": "^4.1.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "ts-pattern": "^5.6.0",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
