--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "ts-pattern": "^5.6.0",
-    "yarn": "^1.22.22"
+    "yarn": "^1.22.22",
+    "react-native-reanimated": "~3.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
